# automaton-auditor

./: .env.example  Dockerfile  README.md  pyproject.toml
audit/report_onpeer_generated/: report.md
audit/report_onself_generated/: report.md
reports/: final_report.md  interim_report.md
src/: __main__.py  config.py  graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
